@@ -156,14 +156,24 @@ BEEP_REJECT[string]=-f 400 -l 100 -n -f 350 -l 70
 # addresses have to be configured beforehand.
 STRICTIPCHECK=1
 
-# Manual jury verification of submissions:
+# Manual jury verification of submissions.
 # This determines whether the jury should manually verify the
 # automatic judgings of the DOMjudge system. Possible values:
-# 0 = Off: No verification possible at all.
+# 0 = Off:      No verification possible at all.
 # 1 = Optional: Jury can mark judgings as verified, but this is not
 #               needed for correct functioning of the contest.
 # 2 = Required: Jury needs to verify judgings before they are valid.
 SUBM_VERIFY=1
+
+# Show compile output in team webinterface.
+# Note that this might give teams the possibility to gain information
+# about the judging system; e.g. which functions are usable or
+# possibly system information through compiler directives.
+# 0 = Never
+# 1 = Only on compilation error(s)
+# 2 = Always
+SHOW_COMPILE=1
+
 
 #############
 # Debugging #
