@@ -14,18 +14,19 @@ include('menu.php');
 $sid = (int)$_GET['id'];
 
 // select also on teamid so we can only select our own submissions
-$row = $DB->q('MAYBETUPLE SELECT p.probid, p.name as probname,submittime,l.name as langname,
-					result,output_compile
-	FROM judging j LEFT JOIN submission s USING(submitid)
-		LEFT JOIN language l USING (langid) LEFT JOIN problem p ON(p.probid=s.probid)
-	WHERE j.submitid = %i AND team = %s AND valid = 1',
-	$sid, $login);
+$row = $DB->q('MAYBETUPLE SELECT p.probid, p.name as probname, submittime,
+               l.name as langname, result, output_compile FROM judging j
+               LEFT JOIN submission s USING(submitid)
+               LEFT JOIN language l USING (langid)
+               LEFT JOIN problem p ON(p.probid=s.probid)
+               WHERE j.submitid = %i AND team = %s AND valid = 1',$sid,$login);
 
-if(!$row) {
+if( ! $row ) {
 	echo "Submission not found for this team.\n";
 	include('../footer.php');
 	exit;
 }
+
 ?>
 <h1>Submission details</h1>
 
@@ -37,14 +38,19 @@ if(!$row) {
 </table>
 
 <p>Status: <?=printresult($row['result'], TRUE, TRUE)?></p>
-
-<h2>Compiler output:</h2>
 <?php
-if(@$row['output_compile']) {
-	echo "<pre class=\"output_text\">\n".
-		htmlspecialchars(@$row['output_compile'])."\n</pre>\n\n";
-} else {
-	echo "<p><em>There were no compiler errors or warnings.</em></p>\n";
+
+if ( (SHOW_COMPILE == 2) ||
+     (SHOW_COMPILE == 1 && $row['result'] == 'compiler-error') ) {
+	
+	echo "<h2>Compiler output:</h2>\n\n";
+
+	if(@$row['output_compile']) {
+		echo "<pre class=\"output_text\">\n".
+			htmlspecialchars(@$row['output_compile'])."\n</pre>\n\n";
+	} else {
+		echo "<p><em>There were no compiler errors or warnings.</em></p>\n";
+	}
 }
 
 include('../footer.php');
