@@ -3,6 +3,7 @@ DOMjudge Programming Contest Judging System
 Version 0.3.2 - CVS
 -------------------
  - Added config option to autoconfigure team IP addresses.
+ - Added config option to (not) show compiler output to teams.
  - Moved C-code from headers to separate files.
  - Fixed bugs where submitdaemon couldn't handle spaces in language ext.
 
